--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,20 +14,20 @@ wxopen.appid=wx025575eac69a2d5b
 wxopen.appsecret=deeae310a387fa9d3e8f3830ce64caac
 # 重定向url
 #wxopen.redirect_url=http://16webtest.ngrok.xiaomiqiu.cn
-wxopen.redirect_url=http://cldev.free.idcfengye.com/api/v1/wechat/user/callback
+wxopen.redirect_url=http://cldev.5gzvip.idcfengye.com/api/v1/wechat/user/callback
 #wxopen.redirect_url=http://www.16web.net/api/v1/wechat/user/callback
 
 #支付配置
 #微信商户平台
 wxpay.mer_id=0582244336
 wxpay.key=XL45y60225PVh1ZaQg9m7LFH0Ygq02vr
-wxpay.callback=http://cldev.free.idcfengye.com/api/v1/wechat/order/callback
+wxpay.callback=http://cldev.5gzvip.idcfengye.com/api/v1/wechat/order/callback
 #wxpay.callback=http://16web.tunnel.qydev.com/api/v1/wechat/order/callback
 
 #===================数据库相关配置==================
 #可以自动识别
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/wechatpay?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/wechatpay?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
 spring.datasource.username =root
 spring.datasource.password =mysql123
 #如果不使用默认的数据源 （com.zaxxer.hikari.HikariDataSource）
