--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ wxpay.callback=http://cldev.5gzvip.idcfengye.com/api/v1/wechat/order/callback
 #===================数据库相关配置==================
 #可以自动识别
 #spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/wechatpay?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/wechatpay?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username =root
 spring.datasource.password =mysql123
 #如果不使用默认的数据源 （com.zaxxer.hikari.HikariDataSource）
